--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ TEST_DATABASE_URL=postgresql+asyncpg://tastebuds:tastebuds@db:5432/tastebuds_tes
 # Frontend (Next.js)
 NEXT_PUBLIC_API_BASE=http://localhost:8000/api
 API_INTERNAL_BASE=http://api:8000/api
+NEXT_PUBLIC_APP_BASE_URL=http://localhost:3000
 
 # Auth / JWT
 JWT_SECRET_KEY=change-me
