docs and search tweak

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,8 @@ REFRESH_TOKEN_EXPIRES_MINUTES=10080
 
 # External API keys (optional but required for live ingestion)
 GOOGLE_BOOKS_API_KEY=
-TMDB_API_KEY=
+# TMDB uses the v4 bearer token: e.g., "Bearer eyJhbGciOiJIUzI1NiJ9..."
+TMDB_API_AUTH_HEADER=
 IGDB_CLIENT_ID=
 IGDB_CLIENT_SECRET=
 LASTFM_API_KEY=
