--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:check": "prettier --check \"**/*.{js,jsx,ts,tsx,md,mdx,json,css,scss}\"",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "next": "14.2.35",
@@ -23,6 +25,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.3",
     "postcss": "8.4.47",
+    "prettier": "3.3.3",
     "tailwindcss": "3.4.14",
     "typescript": "5.6.3"
   },
