--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,18 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   api:
     build:
       context: ./api
@@ -31,6 +43,21 @@ services:
       db:
         condition: service_healthy
 
+  worker:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    command: python -m app.worker
+    env_file:
+      - .env
+    volumes:
+      - ./api:/app
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
   web:
     build:
       context: ./web
@@ -44,6 +71,18 @@ services:
       api:
         condition: service_started
 
+  proxy:
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+    depends_on:
+      api:
+        condition: service_started
+      web:
+        condition: service_started
+    volumes:
+      - ./docker/proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+
   pgadmin:
     image: dpage/pgadmin4:8.5
     environment:
@@ -56,3 +95,4 @@ services:
 
 volumes:
   pgdata:
+  redisdata:
