--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: pip install -r requirements-dev.txt
 
       - name: Ruff
-        run: python -m ruff check app
+        run: python -m ruff check app --fix
 
       - name: Pytest
         run: pytest app/tests
@@ -44,6 +44,16 @@ jobs:
 
       - name: Run API tests via dev script
         run: ./scripts/dev.sh test
+
+  proxy-smoke:
+    needs: compose-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Proxy smoke (TLS + routing)
+        run: ./scripts/proxy_smoke.sh
 
   web:
     runs-on: ubuntu-latest
