--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -3,6 +3,15 @@ events {
 }
 
 http {
+    # Basic rate limits to protect upstreams.
+    limit_req_zone $binary_remote_addr zone=api_rate:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=web_rate:10m rate=20r/s;
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     upstream tastebuds_api {
         server api:8000;
     }
@@ -14,26 +23,46 @@ http {
     server {
         listen 80 default_server;
         server_name _;
+        return 308 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2 default_server;
+        server_name _;
+
+        ssl_certificate /etc/nginx/certs/dev.crt;
+        ssl_certificate_key /etc/nginx/certs/dev.key;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:10m;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+
+        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
 
         location ^~ /api/ {
+            limit_req zone=api_rate burst=20 nodelay;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
             proxy_buffering off;
+            proxy_read_timeout 75s;
         }
 
         location / {
+            limit_req zone=web_rate burst=40 nodelay;
             proxy_pass http://tastebuds_web$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
             proxy_buffering off;
         }
     }
