--- a/example.env
+++ b/example.env
@@ -11,6 +11,7 @@ CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 DATABASE_URL=postgresql+asyncpg://tastebuds:tastebuds@db:5432/tastebuds
 TEST_DATABASE_URL=postgresql+asyncpg://tastebuds:tastebuds@db:5432/tastebuds_test
 REDIS_URL=redis://redis:6379/0
+WORKER_QUEUE_NAMES=default,ingestion,maintenance
 
 # Frontend (Next.js)
 NEXT_PUBLIC_API_BASE=http://localhost:8000/api
