--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,7 @@ services:
 
   proxy:
     image: nginx:stable-alpine
+    command: ["/bin/sh", "/etc/nginx/entrypoint.sh"]
     ports:
       - "80:80"
       - "443:443"
@@ -97,7 +98,8 @@ services:
         condition: service_started
     volumes:
       - ./docker/proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./docker/proxy/certs:/etc/nginx/certs:ro
+      - ./docker/proxy/certs:/etc/nginx/certs:rw
+      - ./docker/proxy/entrypoint.sh:/etc/nginx/entrypoint.sh:ro
 
   pgadmin:
     image: dpage/pgadmin4:8.5
