--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -3,9 +3,14 @@ events {
 }
 
 http {
-    # Basic rate limits to protect upstreams.
-    limit_req_zone $binary_remote_addr zone=api_rate:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=web_rate:10m rate=20r/s;
+    # Rate-limit profiles tuned per route family.
+    limit_req_zone $binary_remote_addr zone=api_default:10m rate=15r/s;
+    limit_req_zone $binary_remote_addr zone=api_search:10m rate=5r/s;
+    limit_req_zone $binary_remote_addr zone=api_ingest:10m rate=2r/s;
+    limit_req_zone $binary_remote_addr zone=api_auth:10m rate=10r/m;
+    limit_req_zone $binary_remote_addr zone=api_public:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=web_rate:10m rate=25r/s;
+    limit_conn_zone $binary_remote_addr zone=api_conn:10m;
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -36,11 +41,77 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        ssl_trusted_certificate /etc/nginx/certs/dev.crt;
+        resolver 1.1.1.1 1.0.0.1 valid=300s;
+        resolver_timeout 5s;
 
         add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
 
+        location ^~ /api/auth/ {
+            limit_req zone=api_auth burst=20 nodelay;
+            limit_conn api_conn 20;
+            proxy_pass http://tastebuds_api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_buffering off;
+            proxy_read_timeout 45s;
+        }
+
+        location ^~ /api/ingest/ {
+            limit_req zone=api_ingest burst=5 nodelay;
+            limit_conn api_conn 20;
+            proxy_pass http://tastebuds_api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_buffering off;
+            proxy_read_timeout 90s;
+        }
+
+        location ^~ /api/search {
+            limit_req zone=api_search burst=10 nodelay;
+            limit_conn api_conn 20;
+            proxy_pass http://tastebuds_api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_buffering off;
+            proxy_read_timeout 75s;
+        }
+
+        location ^~ /api/public/ {
+            limit_req zone=api_public burst=20 nodelay;
+            limit_conn api_conn 50;
+            proxy_pass http://tastebuds_api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_buffering off;
+            proxy_read_timeout 30s;
+        }
+
         location ^~ /api/ {
-            limit_req zone=api_rate burst=20 nodelay;
+            limit_req zone=api_default burst=25 nodelay;
+            limit_conn api_conn 50;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -54,7 +125,7 @@ http {
         }
 
         location / {
-            limit_req zone=web_rate burst=40 nodelay;
+            limit_req zone=web_rate burst=50 nodelay;
             proxy_pass http://tastebuds_web$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
