--- a/example.env
+++ b/example.env
@@ -11,7 +11,7 @@ CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 DATABASE_URL=postgresql+asyncpg://tastebuds:tastebuds@db:5432/tastebuds
 TEST_DATABASE_URL=postgresql+asyncpg://tastebuds:tastebuds@db:5432/tastebuds_test
 REDIS_URL=redis://redis:6379/0
-WORKER_QUEUE_NAMES=default,ingestion,maintenance
+WORKER_QUEUE_NAMES=default,ingestion,maintenance,webhooks,sync
 
 # Frontend (Next.js)
 NEXT_PUBLIC_API_BASE=http://localhost:8000/api
@@ -23,6 +23,12 @@ JWT_SECRET_KEY=change-me
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRES_MINUTES=30
 REFRESH_TOKEN_EXPIRES_MINUTES=10080
+
+# External search preview controls
+EXTERNAL_SEARCH_PREVIEW_TTL_SECONDS=300
+EXTERNAL_SEARCH_PREVIEW_MAX_PAYLOAD_BYTES=50000
+EXTERNAL_SEARCH_PREVIEW_MAX_METADATA_BYTES=20000
+INGESTION_PAYLOAD_RETENTION_DAYS=90
 
 # External API keys (optional but required for live ingestion)
 GOOGLE_BOOKS_API_KEY=
