--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -4,13 +4,15 @@ events {
 
 http {
     # Rate-limit profiles tuned per route family.
-    limit_req_zone $binary_remote_addr zone=api_default:10m rate=15r/s;
-    limit_req_zone $binary_remote_addr zone=api_search:10m rate=5r/s;
-    limit_req_zone $binary_remote_addr zone=api_ingest:10m rate=2r/s;
-    limit_req_zone $binary_remote_addr zone=api_auth:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=api_public:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=web_rate:10m rate=25r/s;
+    limit_req_zone $binary_remote_addr zone=api_default:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=api_search:10m rate=3r/s;
+    limit_req_zone $binary_remote_addr zone=api_ingest:10m rate=1r/s;
+    limit_req_zone $binary_remote_addr zone=api_auth:10m rate=5r/m;
+    limit_req_zone $binary_remote_addr zone=api_public:10m rate=8r/s;
+    limit_req_zone $binary_remote_addr zone=api_ops:2m rate=1r/s;
+    limit_req_zone $binary_remote_addr zone=web_rate:10m rate=20r/s;
     limit_conn_zone $binary_remote_addr zone=api_conn:10m;
+    limit_conn_zone $binary_remote_addr zone=ops_conn:2m;
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -48,10 +50,12 @@ http {
         resolver_timeout 5s;
 
         add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
+        limit_req_status 429;
+        limit_conn_status 429;
 
         location ^~ /api/auth/ {
             limit_req zone=api_auth burst=20 nodelay;
-            limit_conn api_conn 20;
+            limit_conn api_conn 15;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -65,8 +69,8 @@ http {
         }
 
         location ^~ /api/ingest/ {
-            limit_req zone=api_ingest burst=5 nodelay;
-            limit_conn api_conn 20;
+            limit_req zone=api_ingest burst=3 nodelay;
+            limit_conn api_conn 10;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -80,8 +84,8 @@ http {
         }
 
         location ^~ /api/search {
-            limit_req zone=api_search burst=10 nodelay;
-            limit_conn api_conn 20;
+            limit_req zone=api_search burst=5 nodelay;
+            limit_conn api_conn 15;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -95,8 +99,8 @@ http {
         }
 
         location ^~ /api/public/ {
-            limit_req zone=api_public burst=20 nodelay;
-            limit_conn api_conn 50;
+            limit_req zone=api_public burst=10 nodelay;
+            limit_conn api_conn 40;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -110,7 +114,7 @@ http {
         }
 
         location ^~ /api/ {
-            limit_req zone=api_default burst=25 nodelay;
+            limit_req zone=api_default burst=20 nodelay;
             limit_conn api_conn 50;
             proxy_pass http://tastebuds_api$request_uri;
             proxy_http_version 1.1;
@@ -122,6 +126,27 @@ http {
             proxy_set_header Connection $connection_upgrade;
             proxy_buffering off;
             proxy_read_timeout 75s;
+        }
+
+        location ^~ /api/ops/ {
+            limit_req zone=api_ops burst=2 nodelay;
+            limit_conn ops_conn 2;
+            allow 127.0.0.1;
+            allow ::1;
+            allow 10.0.0.0/8;
+            allow 172.16.0.0/12;
+            allow 192.168.0.0/16;
+            deny all;
+            proxy_pass http://tastebuds_api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_buffering off;
+            proxy_read_timeout 30s;
         }
 
         location / {
