--- a/example.env
+++ b/example.env
@@ -5,7 +5,7 @@ API_PREFIX=/api
 LOG_LEVEL=INFO
 
 # CORS
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+CORS_ORIGINS=https://localhost,https://127.0.0.1,http://localhost:3000,http://127.0.0.1:3000
 
 # Database connections (Docker compose defaults)
 DATABASE_URL=postgresql+asyncpg://tastebuds:tastebuds@db:5432/tastebuds
@@ -14,9 +14,9 @@ REDIS_URL=redis://redis:6379/0
 WORKER_QUEUE_NAMES=default,ingestion,integrations,maintenance,webhooks,sync
 
 # Frontend (Next.js)
-NEXT_PUBLIC_API_BASE=http://localhost:8000/api
+NEXT_PUBLIC_API_BASE=https://localhost/api
 API_INTERNAL_BASE=http://api:8000/api
-NEXT_PUBLIC_APP_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_APP_BASE_URL=https://localhost
 
 # Auth / JWT
 JWT_SECRET_KEY=change-me
