--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -1,165 +1,225 @@
-events {
-    worker_connections 1024;
+# Rate-limit profiles tuned per route family.
+limit_req_zone $binary_remote_addr zone=api_default:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=api_search:10m rate=3r/s;
+limit_req_zone $binary_remote_addr zone=api_ingest:10m rate=1r/s;
+limit_req_zone $binary_remote_addr zone=api_auth:10m rate=5r/m;
+limit_req_zone $binary_remote_addr zone=api_public:10m rate=8r/s;
+limit_req_zone $binary_remote_addr zone=api_ops:2m rate=1r/s;
+limit_req_zone $binary_remote_addr zone=web_rate:10m rate=20r/s;
+limit_conn_zone $binary_remote_addr zone=api_conn:10m;
+limit_conn_zone $binary_remote_addr zone=ops_conn:2m;
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
 }
 
-http {
-    # Rate-limit profiles tuned per route family.
-    limit_req_zone $binary_remote_addr zone=api_default:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=api_search:10m rate=3r/s;
-    limit_req_zone $binary_remote_addr zone=api_ingest:10m rate=1r/s;
-    limit_req_zone $binary_remote_addr zone=api_auth:10m rate=5r/m;
-    limit_req_zone $binary_remote_addr zone=api_public:10m rate=8r/s;
-    limit_req_zone $binary_remote_addr zone=api_ops:2m rate=1r/s;
-    limit_req_zone $binary_remote_addr zone=web_rate:10m rate=20r/s;
-    limit_conn_zone $binary_remote_addr zone=api_conn:10m;
-    limit_conn_zone $binary_remote_addr zone=ops_conn:2m;
+map $host $is_valid_host {
+    default 0;
+    ~*^(localhost|127\.0\.0\.1)$ 1;
+}
 
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
+upstream tastebuds_api {
+    server api:8000;
+}
+
+upstream tastebuds_web {
+    server web:3000;
+}
+
+server {
+    listen 80 default_server;
+    server_name localhost 127.0.0.1;
+    if ($is_valid_host = 0) {
+        return 444;
+    }
+    return 308 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2 default_server;
+    server_name localhost 127.0.0.1;
+    if ($is_valid_host = 0) {
+        return 444;
     }
 
-    upstream tastebuds_api {
-        server api:8000;
+    ssl_certificate /etc/nginx/certs/dev.crt;
+    ssl_certificate_key /etc/nginx/certs/dev.key;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:10m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
+    limit_req_status 429;
+    limit_conn_status 429;
+
+    location ^~ /api/auth/ {
+        limit_req zone=api_auth burst=20 nodelay;
+        limit_conn api_conn 15;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 45s;
     }
 
-    upstream tastebuds_web {
-        server web:3000;
+    location ^~ /api/ingest/ {
+        limit_req zone=api_ingest burst=3 nodelay;
+        limit_conn api_conn 10;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 90s;
     }
 
-    server {
-        listen 80 default_server;
-        server_name _;
-        return 308 https://$host$request_uri;
+    location ^~ /api/search {
+        limit_req zone=api_search burst=5 nodelay;
+        limit_conn api_conn 15;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 75s;
     }
 
-    server {
-        listen 443 ssl http2 default_server;
-        server_name _;
+    location ^~ /api/public/ {
+        limit_req zone=api_public burst=10 nodelay;
+        limit_conn api_conn 40;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 30s;
+    }
 
-        ssl_certificate /etc/nginx/certs/dev.crt;
-        ssl_certificate_key /etc/nginx/certs/dev.key;
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:SSL:10m;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        ssl_trusted_certificate /etc/nginx/certs/dev.crt;
-        resolver 1.1.1.1 1.0.0.1 valid=300s;
-        resolver_timeout 5s;
+    location ^~ /api/ {
+        limit_req zone=api_default burst=20 nodelay;
+        limit_conn api_conn 50;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 75s;
+    }
 
-        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
-        limit_req_status 429;
-        limit_conn_status 429;
+    location ^~ /api/ops/ {
+        limit_req zone=api_ops burst=2 nodelay;
+        limit_conn ops_conn 2;
+        allow 127.0.0.1;
+        allow ::1;
+        allow 10.0.0.0/8;
+        allow 172.16.0.0/12;
+        allow 192.168.0.0/16;
+        deny all;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 30s;
+    }
 
-        location ^~ /api/auth/ {
-            limit_req zone=api_auth burst=20 nodelay;
-            limit_conn api_conn 15;
-            proxy_pass http://tastebuds_api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_read_timeout 45s;
-        }
+    location = /health {
+        limit_req zone=api_default burst=10 nodelay;
+        limit_conn api_conn 20;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 15s;
+    }
 
-        location ^~ /api/ingest/ {
-            limit_req zone=api_ingest burst=3 nodelay;
-            limit_conn api_conn 10;
-            proxy_pass http://tastebuds_api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_read_timeout 90s;
-        }
+    location ^~ /docs {
+        limit_req zone=api_default burst=10 nodelay;
+        limit_conn api_conn 20;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 30s;
+    }
 
-        location ^~ /api/search {
-            limit_req zone=api_search burst=5 nodelay;
-            limit_conn api_conn 15;
-            proxy_pass http://tastebuds_api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_read_timeout 75s;
-        }
+    location = /openapi.json {
+        limit_req zone=api_default burst=10 nodelay;
+        limit_conn api_conn 20;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 30s;
+    }
 
-        location ^~ /api/public/ {
-            limit_req zone=api_public burst=10 nodelay;
-            limit_conn api_conn 40;
-            proxy_pass http://tastebuds_api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_read_timeout 30s;
-        }
+    location ^~ /redoc {
+        limit_req zone=api_default burst=10 nodelay;
+        limit_conn api_conn 20;
+        proxy_pass http://tastebuds_api$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
+        proxy_read_timeout 30s;
+    }
 
-        location ^~ /api/ {
-            limit_req zone=api_default burst=20 nodelay;
-            limit_conn api_conn 50;
-            proxy_pass http://tastebuds_api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_read_timeout 75s;
-        }
-
-        location ^~ /api/ops/ {
-            limit_req zone=api_ops burst=2 nodelay;
-            limit_conn ops_conn 2;
-            allow 127.0.0.1;
-            allow ::1;
-            allow 10.0.0.0/8;
-            allow 172.16.0.0/12;
-            allow 192.168.0.0/16;
-            deny all;
-            proxy_pass http://tastebuds_api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-            proxy_read_timeout 30s;
-        }
-
-        location / {
-            limit_req zone=web_rate burst=50 nodelay;
-            proxy_pass http://tastebuds_web$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_buffering off;
-        }
+    location / {
+        limit_req zone=web_rate burst=50 nodelay;
+        proxy_pass http://tastebuds_web$request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_buffering off;
     }
 }
