feat: add taste profiles, availability, lineage, pairings, and draft shares

--- a/example.env
+++ b/example.env
@@ -31,6 +31,9 @@ EXTERNAL_SEARCH_PREVIEW_MAX_METADATA_BYTES=20000
 INGESTION_PAYLOAD_RETENTION_DAYS=90
 INGESTION_PAYLOAD_MAX_BYTES=250000
 INGESTION_METADATA_MAX_BYTES=50000
+AVAILABILITY_REFRESH_DAYS=7
+TASTE_PROFILE_REFRESH_HOURS=24
+DRAFT_SHARE_TOKEN_TTL_DAYS=7
 CREDENTIAL_VAULT_KEY=
 OPS_ADMIN_EMAILS=
 
