Add integrations API/UI, Spotify export, Arr webhook queue, and automation scaffolding

--- a/example.env
+++ b/example.env
@@ -44,3 +44,7 @@ TMDB_API_AUTH_HEADER=
 IGDB_CLIENT_ID=
 IGDB_CLIENT_SECRET=
 LASTFM_API_KEY=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REDIRECT_URI=https://localhost/api/integrations/spotify/callback
+SPOTIFY_SCOPES=playlist-modify-private,playlist-modify-public,user-read-email
