--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -15,6 +15,7 @@ tenacity==8.3.0
 python-slugify==8.0.4
 email-validator==2.1.1
 python-dotenv==1.0.1
+PyYAML==6.0.1
 redis>=4.5,<5
 rq==1.2.0
 rq-scheduler==0.13.1
